# OOD-labs

exam/: CMakeLists.txt
exam/Bridge/: Radio.h
exam/Decorator/: Decorator.h  DecoratorAdd.h  DecoratorMult.h  IComponent.h
exam/Iterator/: Library.h  main.cpp
exam/Prototype/: mainPrototype.cpp
exam/Proxy/: mainHeavy.cpp
exam/Schemas/: AudioConverter.md  Messager.md  Quiz.md  T2S.md  Table.md  Tanks.md
exam/State/: mainState.cpp
exam/TemplateMethod/: TeaAndCoffee.h
exam/trash/Bridge/: AdvancedRemoteControl.h  Device.h  RemoteControl.h  TV.h  main.cpp
exam/trash/Decorator/: Component.h  main.cpp
exam/trash/FabricMethod/: mainFabricMethod.cpp
exam/trash/Iterator/: Book.h  IBookIterator.h  Library.h
exam/trash/Strategy/: main.cpp
exam/trash/TemplateMethod/: Bevarage.h  main.cpp
lab1/1/: CMakeLists.txt  docs.md
lab1/1/src/1_1/Duck/: Duck.h  MallardDuck.h  ModelDuck.h  RubberDuck.h
lab1/1/src/2_1/Duck/: Duck.h  RedheadDuck.h  RubberDuck.h
lab1/1/src/3_1/: Duck.h  DuckFunctions.h
lab1/1/src/3_1/Duck/: MallardDuck.h  ModelDuck.h  RedHeadDuck.h  RubberDuck.h
lab1/1/test/1_1/: test.cpp
lab1/1/test/2_1/: test.cpp
lab1/1/test/3_1/: test.cpp
lab1/4/: CMakeLists.txt  docs.md
lab1/4/src/: main.cpp
lab1/4/src/Canvas/: ICanvas.h
lab1/4/src/Canvas/PNGCanvas/: PNGCanvas.cpp  PNGCanvas.h
lab1/4/src/Controller/: ShapeController.cpp  ShapeController.h
lab1/4/src/Picture/: Picture.cpp  Picture.h  ShapeType.h  ShapeTypeConverter.h
lab1/4/src/Service/: ShapeService.cpp  ShapeService.h  ShapeType.h  ShapeTypeConverter.h
lab1/4/src/Shape/: Shape.h
lab1/4/src/Shape/DrawingStrategy/: CircleDrawingStrategy.h  CircleGeometryTypeStrategy.h  IDrawingStrategy.h  IGeometryTypeStrategy.h  (+8 more)
lab1/4/test/: test.cpp
lab10/: CMakeLists.txt  docs.md
lab10/cmd/: main.cpp
lab10/src/: main.cpp
lab10/src/App/: App.h
lab10/src/App/Command/: ChangeRectShapeCommand.h  DeleteShapeCommand.h  GroupCommand.h  ICommand.h  InsertShapeCommand.h
lab10/src/App/History/: AbstractCommand.h  CommandHistory.h  ICommandStorage.h  IHistory.h
lab10/src/App/Model/: IShapeSelection.h  PictureDraftApp.h  PictureDraftAppModel.h  ShapeApp.h  ShapeAppModel.h  ShapeSelection.h
lab10/src/App/UseCase/: DeleteShapeUseCase.h  IDeleteShapeUseCase.h  IInsertShapeUseCase.h  IMoveShapeUseCase.h  IResizeShapeUseCase.h  IUseCaseFactory.h  InsertShapeUseCase.h  MoveShapeUseCase.h  ResizeShapeUseCase.h  UseCaseFactory.h
lab10/src/Canvas/: CanvasSFML.cpp  CanvasSFML.h  ICanvas.h
lab10/src/Common/: Color.h  Point.h  Rect.h  ShapeType.h  UUID.h
lab10/src/Model/: FillStyle.h  LineStyle.h  PictureDraft.h  Shape.h
lab10/src/Presenter/: IPictureDraftViewListener.h  IPictureDraftViewPresenter.h  MenuViewPresenter.h  PictureDraftPresenter.h  PictureDraftViewPresenter.h  ShapeViewPresenter.h
lab10/src/View/: IShapeViewStrategyFactory.h  MenuView.h  PictureDraftView.h  SelectionFrameView.h  ShapeView.h  ShapeViewStrategyFactory.h
lab10/src/View/Strategy/: EllipseViewStrategy.h  IShapeViewStrategy.h  RectangleViewStrategy.h  TriangleViewStrategy.h
lab10/test/: test.cpp
lab2/1/: CMakeLists.txt  docs.md
lab2/1/src/: main.cpp
lab2/1/src/1_1/: Observer.h  WeatherData.h  main.cpp
lab2/1/src/1_2/: Observer.h  WeatherData.h
lab2/1/src/1_3/: Observer.h  WeatherData.h
lab2/1/src/1_4/: Observer.h  WeatherData.h
lab2/1/src/1_5/: Observer.h  WeatherData.h  main.cpp
lab2/1/src/1_7/: Observer.h  WeatherData.h  main.cpp
lab2/1/test/: test.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test7.cpp
lab2/1/test/1_1/: test.cpp
lab3/1/: CMakeLists.txt  docs.md
lab3/1/src/1_1/: Beverages.h  Condiments.h  main.cpp
lab3/1/src/1_2/: Beverages.h  Condiments.h  IBeverage.h  main.cpp
lab3/1/test/: test1.cpp
lab4/: CMakeLists.txt  docs.md
lab4/src/: Client.h  main.cpp
lab4/src/Canvas/: ICanvas.h
lab4/src/Canvas/PNGCanvas/: PNGCanvas.cpp  PNGCanvas.h
lab4/src/Designer/: Designer.h  IDesigner.h  PictureDraft.h
lab4/src/Painter/: IPainter.h  Painter.h
lab4/src/Shape/: Color.h  Ellipse.h  Point.h  Rectangle.h  RegularPolygon.h  Shape.h  Triangle.h
lab4/src/Shape/Factory/: IShapeFactory.h  ShapeFactory.h
lab4/src/Shape/GeometryTypeStrategy/: EllipseGeometryTypeStrategy.h  IGeometryTypeStrategy.h  RectangleGeometryTypeStrategy.h  RegularPolygonGeometryTypeStrategy.h  TriangleGeometryTypeStrategy.h
lab4/src/ShapeFactory/: IShapeFactory.h  ShapeFactory.h
lab4/test/: RectangleTest.cpp  test.cpp
lab5/: CMakeLists.txt  docs.md
lab5/src/: CommandHandler.h  main.cpp
lab5/src/Document/: ConstDocumentItem.h  Document.h  DocumentItem.h  IDocument.h
lab5/src/Document/Command/: ICommand.h
lab5/src/Document/Document/: Document.cpp  Document.h
lab5/src/Document/History/: History.cpp  History.h
lab5/src/Document/Image/: IImage.h  Image.h
lab5/src/Document/Paragraph/: IParagraph.h  Paragraph.h
lab5/src/Menu/: Menu.cpp  Menu.h
lab5/test/: test.cpp
lab7/: CMakeLists.txt  docs.md
lab7/src/: Client.h  CommonTypes.h  IDrawable.h  ShapeLib.h  main.cpp  version1.h
lab7/src/Canvas/: ICanvas.h
lab7/src/Canvas/PNGCanvas/: PNGCanvas.cpp  PNGCanvas.h
lab7/src/Shape/: Ellipse.h  GroupShape.h  IGroupShape.h  IShape.h  IShapes.h  Rectangle.h  Shape.h  Triangle.h
lab7/src/Shape/Style/: GroupStyle.h  IGroupStyle.h  IGroupSytle.h  IStyle.h  IStyles.h  ProxyStyle.h  Style.h
lab7/src/ShapeFactory/: IShapeFactory.h  ShapeFactory.h
lab7/src/Slide/: ISlide.h  Slide.h  SlideService.h
lab7/test/: test.cpp
lab8/: CMakeLists.txt  docs.md
lab8/src/: CommandHandler.h  main.cpp
lab8/src/Menu/: Menu.cpp  Menu.h
lab8/src/MultiGumballMachine/: IMultiGumballMachine.h  MultiGumballMachine.h
lab8/src/MultiGumballMachine/Naive/: GumballMachine.h
lab8/src/MultiGumballMachine/State/: HasQuarterState.h  IState.h  NoQuarterState.h  SoldOutState.h  SoldState.h
lab8/src/Naive/: GumballMachine.h
lab8/src/WithState/: GumballMachine.h  IGumballMachine.h
lab8/src/WithState/State/: HasQuarterState.h  IState.h  NoQuarterState.h  SoldOutState.h  SoldState.h
lab8/test/: test.cpp
(+46 files in other folders)
